# react_dnmd_mng

./: package.json  pnpm-workspace.yaml  requirements.txt
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  pos.py  projects.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/crud/: base.py  crud_po.py  crud_project.py  crud_user.py
backend/app/models/: project.py  user.py
backend/app/schemas/: po.py  project.py  user.py
frontend/: package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: Header.tsx  Sidebar.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  usePOs.ts  useProjects.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  RootLayout.tsx
frontend/src/lib/: api.ts  constants.ts  utils.ts  validation.ts
frontend/src/pages/: DashboardPage.tsx  SettingsPage.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/pos/: PODetailPage.tsx  POFormPage.tsx  POListPage.tsx
frontend/src/pages/projects/: ProjectDetailPage.tsx  ProjectFormPage.tsx  ProjectListPage.tsx
frontend/src/types/: index.ts
scripts/: dev.sh
